# moveit_ur10

./: .gitignore  CMakeLists.txt  README.md  TROUBLESHOOTING.md  package.xml  setup.py
config/: ompl_planning.yaml  ur10_with_gripper.srdf  ur10_with_gripper.urdf.xacro  ur10_with_gripper_isaac.urdf.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/moveit_ur10/share/moveit_ur10/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/moveit_ur10/share/moveit_ur10/cmake/: moveit_ur10Config.cmake
install/moveit_ur10/share/moveit_ur10/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur10_with_gripper.srdf  ur10_with_gripper.urdf.xacro  ur10_with_gripper_sim.urdf
install/moveit_ur10/share/moveit_ur10/launch/: demo.launch.py  isaac_moveit.launch.py  move_group.launch.py  rsp.launch.py  warehouse_db.launch.py
install/ur_moveit/share/ur_moveit/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_moveit/share/ur_moveit/cmake/: ur_moveitConfig.cmake
launch/: isaac_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
log/: latest_build  latest_list
resource/: body_map_filt.ply  body_map_filt.usd  camera_poses.txt
scripts/: collision_objects.py  publish_mesh.py  ur10_move.py  ur10_move_like_xarm.py
sim/: new_itobos_env.usd  test.usd  ur10_ros2.usd
(+9 files in other folders)
